Aulas/force-app/main/default/objects/Account/fields/DiscordNickname__c.field-meta.xml
<CustomField>
    <fullName>DiscordNickname__c</fullName>
    <label>Discord Nickname</label>
    <length>255</length>
    <type>Text</type>
</CustomField>