Aulas/force-app/main/default/objects/Account/fields/NotifyNewOrder__c.field-meta.xml
<CustomField>
    <fullName>NotifyNewOrder__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NotifyNewOrder</label>
    <type>Checkbox</type>
</CustomField>